# weenotify

./: .travis.yml  .weenotify.yml.example  Cargo.toml  README.md
ci/: before_deploy.sh  script.sh
src/: cli.rs  filter.rs  main.rs  message.rs  notifier.rs
